--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gray-matter": "^4.0.2",
     "module-alias": "^2.2.0",
     "nodegit": "^0.24.1",
+    "pug": "^2.0.3",
     "queue": "^6.0.0"
   },
   "_moduleAliases": {
@@ -37,6 +38,7 @@
     "@platforms": "data-updater/platforms",
     "@update-if-changed": "data-updater/update-if-changed",
     "@update-post-date": "data-updater/update-post-date",
-    "@drops-page-data": "data-updater/drops-page-data"
+    "@drops-page-data": "data-updater/drops-page-data",
+    "@primes-generator": "primes-generator"
   }
 }
