--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "gray-matter": "^4.0.2",
+    "lodash": "^4.17.11",
     "module-alias": "^2.2.0",
     "nodegit": "^0.24.1",
     "pug": "^2.0.3",
