--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.11",
     "module-alias": "^2.2.0",
     "nodegit": "^0.24.1",
+    "number-to-words": "^1.2.4",
     "pug": "^2.0.3",
     "queue": "^6.0.0"
   },
