--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@platforms": "data-updater/platforms",
     "@update-if-changed": "data-updater/update-if-changed",
     "@update-post-date": "data-updater/update-post-date",
-    "@drops-page-data": "data-updater/drops-page-data"
+    "@drops-page-data": "data-updater/drops-page-data",
+    "@content": "content-management"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
