--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@update-events": "data-updater/update-events",
     "@update-rewards-drop": "data-updater/update-rewards-drop",
     "@git-integration": "integration/git",
-    "@platforms": "data-updater/platforms",
     "@update-if-changed": "data-updater/update-if-changed",
     "@update-post-date": "data-updater/update-post-date",
     "@drops-page-data": "integration/warframe-drops",
-    "@content": "content-management"
+    "@content": "content-management",
+    "@warframestat": "integration/warframestat"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
